[package]
name = "node-syslog"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "2"
napi-derive = "2"
syslog = "^6.0"

[build-dependencies]
napi-build = "2"
